FlightPath Changelog
====================

2012-06-26
  Working on creating an install script for FlightPath; moving database creation statements
  into system.install file, under the system module.


2012-06-10
  Finished the stats module for now.  It could use some more reports, but is OK for now.
  
  Got mobile version back to working state.


2012-06-09
  Beginning work on the stats module.
  
  Changed comment form to be proper FlightPath form, with form api.
  

2012-06-08
  Student developmentals and standardized tests are now in core.
  
  I have officially done away with the concept of the "flightpath_extra_data"
  additional database.
  
  Added in a depricated_message function, to help me track down problems after
  I depricate a function.

  Moved to new watchdog() table and function, instead of the old log table.

  Got rid of old PHP split() function.
  

2012-06-07
  Removed the old AdvisingScreen::draw_curved_title function, in favor of the new
  fp_render_curved_line function.
  
  Got transfer credits & eqv's working correctly.
  

2012-06-05
  Worked with course_search module.  It has now merged with the courseinfoentry module.  Removed
  the courseinfoentry module as a result.
  

2012-06-04
  Removed old references to SESSION["user_type"], replaced with newer check on permissions instead
  
  Renamed old files to have a z__ in front of filename, in preparation to delete.
  
  Popup contact/report a bug is now part of the system module, not its own php file.
  
  Removed references to old admin_debug statement.  Also cleaned up some old comments along
  the way.
  
  Added blank_degrees module and reworked various bits of code to make it work.
   

2012-05-28
  Made sure user has access to submit a form after they've submitted.
  
  Refined permissions, made sure permissions were working correctly for tabs.
  
  Tabs don't show if you don't have permission.
  
  Worked on "student" view, when they can only see their own degree plan.
  