@@ -6,6 +6,19 @@
  */
 
  
+ /**
+  * Call all modules which implement hook_clear_cache
+  */
+function fp_clear_cache() {
+  // Find modules which implement hook_clear_cache
+  $modules = modules_implement_hook("clear_cache");
+  foreach ($modules as $module) {
+    call_user_func($module . '_clear_cache');
+  }  
+} 
+ 
+ 
+ 
 function filter_markup($str) {
   
   // TODO: get allowed tags from a setting.
